# Asymmetrica-Google-Hub

./: .env.example  .gitignore  AGENTS.md  AGENT_ALPHA_PROJECT_SETUP_COMPLETE.md  AGENT_HOTEL_MISSION_COMPLETE.md  AGENT_INDIA_MISSION_COMPLETE.md  AGENT_JULIET_MISSION_COMPLETE.md  ARCHITECTURE.md  ARCHITECTURE_CLARIFICATION.md  ARCHIVE_VERIFICATION.md  ARCHIVIST_COPY_REPORT.md  COPY_DOCS_GUIDE.md  CROSS_PROJECT_VEDIC_INTEGRATION.md  DEEP_ARCHIVIST_SUMMARY.md  JULES_ENGINES_QUICK_REF.md  JULES_INTEGRATION_GUIDE.md  JULES_INTEGRATION_REPORT.md  JULES_MATH_CONTEXT.md  JULES_PROTOCOL_GUIDE.md  JULES_QUICK_START.md  JULES_VEDIC_COLLABORATION_VICTORY.md  JULES_VEDIC_INTEGRATION_DEBRIEF.md  JULES_VEDIC_INTEGRATION_PLAN.md  JULES_VEDIC_INTEGRATION_SPEC.md  MISSION_COMPLETE_REPORT.md  PROJECT_SUMMARY.md  README.md  config.py  main.py  pytest.ini  requirements.txt
.jules/: README.md  (+1 more)
source_materials/prismatica_era/DefenseKit/rust/: Cargo.toml  README.md
source_materials/prismatica_era/DefenseKit/rust/benches/: consensus.rs  performance.rs
source_materials/prismatica_era/DefenseKit/rust/src/: lib.rs
source_materials/prismatica_era/DefenseKit/rust/src/asymmetry/: mod.rs
source_materials/prismatica_era/DefenseKit/rust/src/consciousness_stealth/: tesla_harmonic_chacha20.rs
source_materials/prismatica_era/DefenseKit/rust/src/consensus/: mod.rs
source_materials/prismatica_era/DefenseKit/rust/src/mathematical/: distribution_consciousness.rs  geometric_consciousness.rs  infinite_consciousness.rs  mod.rs
source_materials/prismatica_era/DefenseKit/src/visual-consciousness - experimental avoid consideration for now (for Claude)/: Cargo.toml  claude-to-image-bridge.py  claude-visual-topology-mapper.py  claude_cat_response.txt  generate_claude_cat.py  generate_claude_cat_v2.py  photorealism-mathematical-bridge.py  visual-consciousness-decoder-v2.py  visual-consciousness-decoder.py  visual_consciousness_decoder.rs
(+1121 files in other folders)
