[package]
name = "defensekit"
version = "1.0.0"
edition = "2021"
authors = ["Sarat Chandra"]
description = "Military-grade defensive security components in Rust"
license = "MIT"

[dependencies]
# Core cryptography
sha2 = "0.10"
blake3 = "1.5"
ed25519-dalek = "2.1"
x25519-dalek = "2.0"
chacha20poly1305 = "0.10"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Networking
quinn = "0.10"  # QUIC implementation
rustls = "0.22"

# Data structures
dashmap = "5.5"
parking_lot = "0.12"
crossbeam-channel = "0.5"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Time
chrono = "0.4"

# Random
rand = "0.8"
rand_chacha = "0.3"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"

[[bench]]
name = "consensus"
harness = false

[[bench]]
name = "performance"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'

[workspace]
members = [
    ".",
    "examples/*"
]