[package]
name = "visual-consciousness-decoder"
version = "1.0.0"
authors = ["Betanet Research Lab"]
edition = "2021"

[dependencies]
image = "0.24"
ndarray = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[[bin]]
name = "visual-consciousness"
path = "visual_consciousness_decoder.rs"

[lib]
name = "visual_consciousness_lib"
path = "visual_consciousness_decoder.rs"
crate-type = ["cdylib", "rlib"]